--- a/BLOG/public/home/css/base.css
+++ b/BLOG/public/home/css/base.css
@@ -39,11 +39,13 @@ textarea {
 	padding: 10px;
 }
 
-.fl {
+.list-item {
 	float: left;
 }
-
-.fr {
+.logo-left {
+	float: left;
+}
+.navigation-right{
 	float: right;
 }
 
@@ -64,27 +66,24 @@ textarea {
 	margin-bottom: 10px;
 }
 
-.w1100 {
-	width: 1100px;
-	margin: 0 auto;
-}
+
 
 /* 头部框架开始 */
 .header {
-	width: 100%;
-	min-width: 1100px;
+	width: 1100px;
+	padding-left: 240px;
+	padding-right: 240px;
 	height: 60px;
 	background: #3f434c;
+/* 	box-sizing: border-box; */
 }
 
-.header .w1100 {
-	height: 60px;
-}
+
 /* 头部框架结束 */
 
 /* 网站logo开始 */
 .logo, .logo a, .logo img {
-	width: 175px;
+	width: 120px;
 	height: 60px;
 }
 
