--- a/BLOG/public/home/css/index.css
+++ b/BLOG/public/home/css/index.css
@@ -1,25 +1,63 @@
 /* 文章列表开始 */
+
+.clearfix::before,
+.clearfix::after{
+	content: '';
+	display: table;
+	clear: both;
+}
+
+.index-content{
+	width: 1100px;
+	margin: 0px, 0px;
+	padding-left: 240px;
+	padding-right: 240px;
+	position: relative;
+}
+
 .list {
-	overflow: hidden;	
+	width: 70%;
+	overflow: hidden;
+	border-radius:20px 20px 20px 20px;
+	float: left;
 }
 
 .list li {
-	width: 530px;
-	height: 430px;
+	width: 100%;
+	height: 220px;
 	background: #FFF;
-	margin-top: 30px;
+	/* margin-top: 30px; */
+	padding: 20px;
 	box-shadow: 2px 2px 3px #e1e1e1;
+	box-sizing:border-box;
 }
 
+/* li 里面的内部容器 */
+.elementWraper{
+	position: relative;
+	width: 100%;
+	height: 100%;
+}
+
+/* 文章图片 */
+.element-img{
+	position: absolute;
+}
+
+/* li 里面的图片 */
 .list .thumbnail, 
 .list .thumbnail img {
 	display: block;
-	width: 530px;
-	height: 240px;
+	width: 250px;
+	height: 140px;
 }
 
-.list .content {
-	padding: 16px 20px 0;
+/* 文章简要介绍总容器 */
+.article-content {
+	position: absolute;
+	left: 290px;
+	padding: 15px 15px 0;
+	box-sizing:border-box;
 }
 
 .list .brief {
@@ -27,8 +65,31 @@
 	line-height: 24px;
 	margin-top: 20px;
 }
-
 /* 文章列表结束 */
+
+/* 右侧两个卡片 */
+.kard-day{
+	width: 270px;
+	height: 300px;
+	float: right;
+	background-color: white;
+	padding-top: 30px;
+	padding-left: 20px;
+	padding-right: 20px;
+	border-radius:20px 20px 20px 20px;
+	
+}
+.kard-rank{
+	width: 270px;
+	height: 360px;
+	margin-top: 50px;
+	float: right;
+	background-color: white;
+	padding-top: 30px;
+	padding-left: 20px;
+	padding-right: 20px;
+	border-radius:20px 20px 20px 20px;
+}
 
 /* 分页开始 */
 .page {
