--- a/BLOG/public/home/css/index.css
+++ b/BLOG/public/home/css/index.css
@@ -10,15 +10,119 @@
 .index-content{
 	width: 1100px;
 	margin: 0px, 0px;
+	margin-top: 10px;
 	padding-left: 240px;
 	padding-right: 240px;
 	position: relative;
 }
 
-.list {
-	width: 70%;
+/* 中间滚动区域 */
+.scroll{
+	width: 100%;
+	height: 400px;
+	float: left;
+}
+
+.scroll-left{
+	/* 660 * 400 */
+	width: 67%;
+	height: 100%;
+	border-radius:5px 5px 5px 5px;
+	float: left;
+	position: relative;
 	overflow: hidden;
+}
+
+.navigation-label{
+	position: absolute;
+	bottom: 20px;
+	left: 50%;
+	transform: translateX(-50%);
+	display: flex;
+}
+
+.bar{
+	width: 50px;
+	height: 10px;
+	border: 2px solid #fff;
+	margin: 6px;
+	cursor: pointer;
+	transition: 0.4s;
+}
+
+.bar:hover{
+	background-color: #fff;
+}
+
+input[name = "r"]{
+	position: absolute;
+	visibility: hidden;
+}
+
+.slides{
+	width: 500%;
+	height: 100%;
+	display: flex;
+}
+
+.slide{
+	width: 20%;
+	transition: 0.6s;
+}
+
+.slide img{
+	width: 100%;
+	height: 100%;
+}
+
+#r1:checked ~ .s1{
+	margin-left: 0;
+}
+
+#r2:checked ~ .s1{
+	margin-left: -20%;
+}
+
+#r3:checked ~ .s1{
+	margin-left: -40%;
+}
+
+#r4:checked ~ .s1{
+	margin-left: -60%;
+}
+
+#r5:checked ~ .s1{
+	margin-left: -80%;
+}
+
+.scroll-right{
+	width: 33%;
+	height: 100%;
+	border-radius:5px 5px 5px5px;
+	float: right;
+}
+
+.right-top{
+	height: 50%;
+	padding-left: 10px;
+	padding-right: 10px;
 	border-radius:20px 20px 20px 20px;
+}
+
+.right-bottom{
+	height: 47%;
+	margin-top: 10px;
+	margin-bottom: 0px;
+	padding-left: 10px;
+	padding-right: 10px;
+	border-radius:20px 20px 20px 20px;
+}
+
+.list {
+	width: 71%;
+	margin-top: 10px;
+	overflow: hidden;
+	border-radius:10px 10px 10px 10px;
 	float: left;
 }
 
@@ -72,18 +176,20 @@
 	width: 270px;
 	height: 300px;
 	float: right;
+	margin-top: 10px;
 	background-color: white;
 	padding-top: 30px;
 	padding-left: 20px;
 	padding-right: 20px;
 	border-radius:20px 20px 20px 20px;
-	
 }
+
 .kard-rank{
 	width: 270px;
 	height: 360px;
 	margin-top: 50px;
 	float: right;
+	margin-top: 10px;
 	background-color: white;
 	padding-top: 30px;
 	padding-left: 20px;
