--- a/BLOG/public/home/css/index.css
+++ b/BLOG/public/home/css/index.css
@@ -90,7 +90,7 @@
 	border-radius:20px 20px 20px 20px;
 }
 
-.list {
+.index-content .list {
 	width: 71%;
 	margin-top: 10px;
 	overflow: hidden;
@@ -98,7 +98,7 @@
 	float: left;
 }
 
-.list li {
+.index-content .list li {
 	width: 100%;
 	height: 180px;
 	background: #FFF;
