--- a/BLOG/public/home/css/article-new.css
+++ b/BLOG/public/home/css/article-new.css
@@ -11,7 +11,7 @@
 
 /* 操作区容器 */
 .ope-contatiner{
-	height: 520px;
+	height: 340px;
 	width: 70%;
 	margin: auto;
 	padding-bottom: 30px;
@@ -45,7 +45,8 @@
 	height: 100%;
 }
 
-.form-group input{
+.form-group input,
+.form-group select{
 	display: inline-block;
 	outline-style: none ;
 	border: 1px solid #ccc; 
@@ -63,25 +64,14 @@
 	font-family: "Microsoft soft";
 }
 
-.form-group input:focus{
+.form-group input:focus,
+.form-group select:focus{
     border-color: #66afe9;
     outline: 0;
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6)
 }
 
-.thumbnail-waper{
-	border: 1px solid gray;
-	overflow: hidden;
-	margin-top: 20px;
-	width: 300px;
-	height: 180px;
-	position: absolute;
-	left: 100px;
-	border-radius:5px 5px 5px 5px;
-}
-
-.img-thumbnail{
-	width: 100%;
-	height: 100%;
+.form-group select{
+	width: 30%;
 }
