--- a/BLOG/public/home/css/userinfo.css
+++ b/BLOG/public/home/css/userinfo.css
@@ -1,9 +1,3 @@
-body {
-	font-size: 12px;
-	font-family: 'Microsoft YaHei', 'Arial';
-	background: #DDDDDD;
-	color: #555;
-}
 
 .clearfix::before,
 .clearfix::after{
@@ -61,7 +55,7 @@ body {
 
 .article-small .article-content{
 	width: 100%;
-	height: 540px;
+	height: 560px;
 	padding-left: 10px;
 	padding-right: 10px;
 	padding-top: 40px;
@@ -253,6 +247,7 @@ body {
 }
 
 .article-header {
+	padding-bottom: 0;
 	margin-bottom: 20px;
 }
 
