为blog项目完成了初步的github登录功能，这般多用户情况下内测没问题

--- a/BLOG/public/home/css/article.css
+++ b/BLOG/public/home/css/article.css
@@ -74,6 +74,15 @@
 	line-height: 50px;
 }
 
+.blog-msg a{
+	cursor: pointer;
+	color: blue;
+}
+
+.blog-msg a:hover{
+	color: black;
+}
+
 .form-search{
 	width: 290px;
 	height: 50px;
@@ -259,6 +268,15 @@
 
 .comment-list {
 	margin-top: 30px;
+}
+
+.comment-list a{
+	cursor: pointer;
+	color: #ff7300;
+}
+
+.comment-list a:hover{
+	color: black;
 }
 
 .comment-content {
