修改了2021-12-1号的bug

--- a/BLOG/public/home/css/article.css
+++ b/BLOG/public/home/css/article.css
@@ -308,6 +308,12 @@
 	margin-top: 20px;
 }
 
+.comment-footer-del{
+	margin-left: 5px;
+	cursor: pointer;
+	color: #ff7300;
+}
+
 .comment-content {
 	background-color:gainsboro ;
 	margin-left: 60px;
