--- a/BLOG/public/admin/lib/icomoon/style.css
+++ b/BLOG/public/admin/lib/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?x7rbm4');
-  src:  url('fonts/icomoon.eot?x7rbm4#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?x7rbm4') format('truetype'),
-    url('fonts/icomoon.woff?x7rbm4') format('woff'),
-    url('fonts/icomoon.svg?x7rbm4#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?bybjkx');
+  src:  url('fonts/icomoon.eot?bybjkx#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?bybjkx') format('truetype'),
+    url('fonts/icomoon.woff?bybjkx') format('woff'),
+    url('fonts/icomoon.svg?bybjkx#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -49,6 +49,9 @@
 }
 .icon-calendar:before {
   content: "\e953";
+}
+.icon-bubbles:before {
+  content: "\e96c";
 }
 .icon-user:before {
   content: "\e971";
