--- a/BLOG/public/home/css/userinfo.css
+++ b/BLOG/public/home/css/userinfo.css
@@ -87,6 +87,25 @@
 	bottom: -44px;
 }
 
+/* 分页开始 */
+.page-switch{
+	margin-top: 10px;
+	margin-bottom: 20px;
+}
+
+.page-switch a {
+	display: inline-block;
+	border-radius: .25rem;
+	border: 1px solid black;
+	font-size: 14px;
+	padding: 10px;
+	margin: 0 10px;
+}
+
+.page-switch .active {
+	background-color: #ff7300;
+}
+
 .article-header a,
 .more-text a{
 	display: inline;
@@ -301,13 +320,19 @@
     padding: 0 40px;
 }
 
+#float-right-like-count,
 #float-right-comment-count{
 	color: black;
 	text-decoration: none;
 	float: right;
+	margin-left: 5px;
+}
+
+#float-right-like-count{
 	margin-left: 15px;
 }
 
+#float-right-like-count:hover
 #float-right-comment-count:hover{
 	color: #dc3545;
 }
