--- a/BLOG/public/home/css/article.css
+++ b/BLOG/public/home/css/article.css
@@ -5,14 +5,7 @@
 	clear: both;
 }
 
-.index-article{
-	margin: 0px, 0px;
-	margin-top: 10px;
-	padding-left: 165px;
-	padding-right: 165px;
-	position: relative;
-}
-
+/********************/
 .article-left-main{
 	float: left;
 	width: 800px;
@@ -22,202 +15,32 @@
 	padding-right: 20px;
 	padding-bottom: 0px;
 	margin-bottom: 20px;
-	overflow: hidden;
-	font-size: 14px;
 }
 
-.right-container{
-	padding: 0;
-	border: 0;
-	position: relative;
-}
-
-.article-right-userinfo{
-	width: 290px;
-	height: 300px;
-
-	position: absolute;
-	right: 0;
-
-	padding: 0;
-	background: #FFF;
-}
-
-.blog-logo {
-    display: block;
-    margin: 0 auto;
-    width: 8rem;
-	height: 8rem;
-    border-radius: 100%;
-    border-style: none;
-	margin-top: 20px;
-}
-
-.blog-author {
-    padding: 0 2rem;
-    color: #fff;
-    font-size: 1rem;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-	text-align: center;
-}
-
-.blog-msg{
-	padding-left: 2rem;
-	padding-right: 2rem;
+.article-left-main .article-content{
 	width: 100%;
-	height: 50px;
-	text-align: center;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 40px;
+	font-size: 14px;
 	box-sizing: border-box;
 }
+/********************/
 
-.blog-msg span{
-	line-height: 50px;
-}
-
-.blog-msg a{
-	cursor: pointer;
-	color: blue;
-}
-
-.blog-msg a:hover{
-	color: black;
+.article-right-userinfo{
+	top: 0px;
 }
 
 .form-search{
-	width: 290px;
-	height: 50px;
-
-	position: absolute;
-	right: 0;
 	top: 320px;
-
-	padding: 0;
-}
-
-.form-search input{
-	width: 190px;
-	height: 100%;
-	border: 0;
-	position: absolute;
-	left: 0;
-
-	/* 拷贝过来的属性 */
-    padding-left: 10px;
-    font-size: 14px;
-
-	color: inherit;
-    font: inherit;
-	border-radius: .25rem;
-}
-
-.form-search button{
-	width: 80px;
-	height: 100%;
-	border: 0;
-	position: absolute;
-	right: 0;
-
-	/* 拷贝过来的属性 */
-	font-weight: 400;
-	text-align: center;
-    white-space: nowrap;
-	vertical-align: middle;
-	font-size: 1rem;
-    line-height: 1.5;
-	color: #fff;
-    background-color: #dc3545;
-	border-radius: .25rem;
-	
 }
 
 .type-list{
-	width: 290px;
-	
-	position: absolute;
-	right: 0;
 	top: 390px;
-
-	background-color: white;
 }
+/********************/
 
-.type-list h4{
-	margin: 0;
-    color: #111;
-    border-top: 1px solid #eee;
-    border-bottom: 1px solid #eee;
-    padding: 14px 20px 13px;
-    font-weight: 500;
-    line-height: 28px;
-    letter-spacing: 2px;
-    font-size: 18px;
-}
-
-.social-network{
-	list-style: none;
-    padding: 6px 0;
-    margin: 0;
-	text-align: center;
-	font-size: 20px;
-}
-
-.social-network li{
-	margin-right: 8px;
-}
-
-.icon-hammer:before,
-.icon-home,
-.icon-info,
-.icon-qq,
-.icon-plus,
-.icon-enveop{
-	content: "\e996";
-}
-
-.widget-content li{
-	margin: 8px 20px;
-	display: list-item;
-    text-align: -webkit-match-parent;
-    padding: 6px 0;
-}
-
-.widget-content a{
-	cursor: pointer;
-}
-
-.article-header {
-	margin-bottom: 20px;
-}
-
-.article-content {
-	margin-bottom: 20px;
-}
-
-.article-content p {
-	font-size: 14px;
-	line-height: 26px;
-	padding: 8px 0;
-}
-
-/* 让文章内部的 ul 显示和 ckeditor 里一致 */
-.article-content ul{
-	
-	list-style: disc;
-	display: block;
-    list-style-type: disc;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 40px;
-	margin-right: 0px;
-    padding: 0 40px;
-}
-
-.article-content pre{
-	overflow-x:scroll;
-}
-
+/********************/
 .article-comment{
 	padding-right: 20px;
 }
@@ -251,7 +74,6 @@
 .comment-form .items span {
 	float: left;
 	width: 40px;
-
 }
 
 .comment-form .items input[type="text"] {
@@ -319,29 +141,9 @@
 	margin-left: 60px;
 	font-size: 16px;
 }
+/********************/
 
-/* 评论结束 */
-
-/* 分页开始 */
-.page-switch{
-	margin-top: 10px;
-	margin-bottom: 20px;
-}
-
-.page-switch a {
-	color: black;
-	display: inline-block;
-	border-radius: .25rem;
-	border: 1px solid black;
-	font-size: 14px;
-	padding: 10px;
-	margin: 0 10px;
-}
-
-.page-switch .active {
-	background-color: #ff7300;
-}
-
+/********************/
 .like-wraper{
 	text-align: center;
 }
@@ -352,9 +154,4 @@
 	color:gray; 
 	cursor:pointer;
 }
-
-#like:hover{
-	color:gray; 
-}
-
-.cs{color:red;}
+/********************/
